--- a/css/projetos.css
+++ b/css/projetos.css
@@ -56,7 +56,7 @@ figcaption{
 }
 
 .projeto{
-    color: white;
+    color: rgb(187, 106, 241);
     font-family: monospace;
     margin-top: 250px;
     font-size: 70px;
