--- a/css/conhecimentos.css
+++ b/css/conhecimentos.css
@@ -1,49 +1,28 @@
 
-.conhecimentos{
-    margin-top: 250px;
-}
-
 #texto{  
-    color: white;
+    color: rgb(187, 106, 241);
     font-family: monospace;
-    margin-top: 200px;
+    margin-top: 150px;
     font-size: 70px;
     margin-left: 20px;
     text-align: center;
 }
 
-.logos{
-    width: 185px;
-    height: 185px;
-    margin-top: 100px;
-    margin-left: 480px;
+img{
+    width: 200px;
+    height: 200px;
+    padding: 15px;
+    margin-top: 50px;
 }
-
-#css{
-    width: 185px;
-    height: 185px;
-    margin-top: 100px;
-    margin-left: 15px;
+.conhecimentos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-
-#c{
-    width: 185px;
-    height: 185px;
-    margin-top: 100px;
-    margin-left: 20px;
-}
-
-#vstudio{
-    width: 185px;
-    height: 185px;
-    margin-top: 100px;
-    margin-left: 20px;
-}
-
-#vscode{
-    width: 185px;
-    height: 185px;
-    margin-left: 15px;
-}
+  
+ .container2{
+    margin-bottom: 60px;
+ }
 
 
