--- a/css/sobremim.css
+++ b/css/sobremim.css
@@ -1,25 +1,38 @@
 .imagem {
-    margin-top: 120px;
-    margin-left: 635px;
     border-radius: 50%;
     width: 300px;
     height: 300px;
-}
-
-
-.sobre{
-   font-size: 70px;
-   margin-bottom: 70px;
-   margin-top: 620px;
+    margin-left: 650px;
 }
 
 #sobre-mim{
-    color: white;
     font-family: monospace;
     font-size: 30px;
-    margin-top: 360px;
-    text-align: center;
-    margin-left: 25px;
-    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
+
+.sobre{
+    color:  rgb(187, 106, 241);
+   font-size: 70px;
+   margin-bottom: 70px;
+   margin-top: 200px;
+}
+
+.sobreMim{
+    margin: 0px 15px 0 15px;
+    text-align: center;
+    color: black;
+}
+
+
+
+
+
+
+
+
+
 
