--- a/css/conhecimentos.css
+++ b/css/conhecimentos.css
@@ -8,7 +8,7 @@
     text-align: center;
 }
 
-img{
+.container1 img, .container2 img{
     width: 200px;
     height: 200px;
     padding: 15px;
@@ -24,5 +24,8 @@ img{
  .container2{
     margin-bottom: 60px;
  }
+
+
+
 
 
