--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,11 +25,11 @@ nav {
     margin-top: 40px;
 }
 
-.inicio:hover{
+.inicio:hover {
     color: rgb(187, 106, 241);
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -101,50 +101,107 @@ a{
 }
 
 @keyframes mensagem {
-    
-    0%, 20%{
+
+    0%,20% {
         content: "";
     }
-    21%, 40%{
+
+    21%,40% {
         content: "Meu nome é Alissa Gabriel";
     }
-    41%, 60%{
+
+    41%,60% {
         content: "Estudo na Fatec-Jahu";
     }
-    61%, 80%{
+
+    61%,80% {
         content: "Estou cursando DSM";
     }
-    81%, 100%{
+
+    81%,100% {
         content: "";
     }
 }
 
-button:hover{
+button:hover {
     background-color: rgb(187, 106, 241);
     cursor: pointer;
-    color:black;
+    color: black;
 }
 
 body::-webkit-scrollbar {
-    width: 15px;               
-  }
-  
-  body::-webkit-scrollbar-track {
-    background: white;        
-  }
-  
-  body::-webkit-scrollbar-thumb {
-    background-color: rgb(187, 106, 241);    
-    border-radius: 10px;     
-    border: 3px solid black;  
-  }
+    width: 15px;
+}
 
-  .menu2 {
+body::-webkit-scrollbar-thumb {
+    background-color: rgb(187, 106, 241);
+    border-radius: 10px;
+    border: 3px solid black;
+}
+
+.inicio2 {
+    font-size: 50px;
+    font-weight: 700;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    position: absolute;
+    padding-top: 30px;
+    padding-left: 50px;
+}
+
+.inicio2:hover {
+    color: rgb(187, 106, 241);
+}
+
+.copy {
+    font-size: 20px;
+    text-align: center;
+}
+
+.github {
+    width: 80px;
+    height: 80px;
+    margin-right: 28px;
+    margin-top: 2px;
+}
+
+.gmail {
+    width: 55px;
+    height: 55px;
+    margin-right: 28px;
+    margin-top: 2px;
+}
+
+.menu1 {
     list-style: none;
     display: flex;
-    flex-direction: column;
-    align-items: end;
-    padding-right: 50px;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 40px;
+    padding-right: 40px;
+}
+
+.menu1 li {
+    padding-left: 30px;
+}
+
+.github:hover {
+    width: 150px;
+    height: 150px;
+}
+
+.gmail:hover {
+    width: 100px;
+    height: 100px;
+}
+
+.menu2 {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 70px;
 }
 
 .menu2 li a:hover {
@@ -161,23 +218,3 @@ body::-webkit-scrollbar {
     color: black;
 }
 
-.inicio2{
-    font-size: 50px;
-    font-weight: 700;
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    position:absolute;
-    padding-top: 30px;
-    padding-left: 50px;
-}
-
-.inicio2:hover{
-    color: rgb(187, 106, 241);
-}
-
-.copy{
-    font-size: 20px;
-    text-align: center;
-}
