--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -12,6 +12,12 @@
     justify-content: center;
 }
 
+.logo1 {
+    width: 200px;
+    height: 200px;
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
 .logo1:hover {
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
     width: 270px;
@@ -24,23 +30,20 @@
     height: 400px;
 }
 
+.logo2 {
+    width: 300px;
+    height: 300px;
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
 .logo3:hover {
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
     width: 270px;
     height: 270px;
 }
 
-.logo1 {
-    width: 200px;
-    height: 200px;
-}
-
-.logo2 {
-    width: 300px;
-    height: 300px;
-}
-
 .logo3 {
     width: 180px;
     height: 180px;
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
