--- a/assets/css/projetos.css
+++ b/assets/css/projetos.css
@@ -1,5 +1,4 @@
-
-#projeto{
+#projeto {
     color: rgb(187, 106, 241);
     font-family: monospace;
     margin-top: 150px;
@@ -8,7 +7,7 @@
     text-align: center;
 }
 
-.projetos1{
+.projetos1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,11 +15,15 @@
     flex-wrap: wrap;
 }
 
-.card1, .card2, .card3{
+.card1,
+.card2,
+.card3 {
     padding: 40px;
 }
-  
-.card1 img,.card2 img, .card3 img {
+
+.card1 img,
+.card2 img,
+.card3 img {
     overflow: hidden;
     clear: both;
     background-color: white;
@@ -30,13 +33,15 @@
     width: 300px;
     height: 300px;
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-} 
+}
 
-.card1:hover img, .card2:hover img, .card3:hover img{
+.card1:hover img,
+.card2:hover img,
+.card3:hover img {
     scale: 1.4;
 }
 
- figcaption{
+figcaption {
     background-color: #222;
     border-radius: 10px;
     color: #fff;
@@ -44,4 +49,4 @@
     text-align: center;
     text-decoration: none;
     font-family: monospace;
-} 
+}
